# VoiceIntake-AI

./: .env.example  .gitignore  AGENTS.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  TESTING.md  VOICE_DEBUG.md  docker-compose.yml  pyproject.toml
backend/: config.py  database.py  main.py
backend/db/: migrate.py  models.py  repository.py
backend/evals/: EVAL_REPORT.md  eval_results.json  metrics.py  patient_simulator.py  run_evals.py  scenarios.py
backend/fsm/: nodes.py  prompts.py  runner.py
backend/observability/: latency_tracker.py
backend/rag/: embedder.py  enrich.py  ingest.py  retriever.py
backend/safety/: escalation.py  guardrails.py
backend/scripts/: smoke_escalation.py  smoke_guardrails.py  smoke_text_fsm.py  smoke_ws.py
backend/session/: exceptions.py  manager.py  memory_manager.py  models.py  redis_manager.py
backend/tests/: smoke_persistence.py  smoke_rag_unavailable.py  smoke_retry_handoff.py  smoke_session_store.py  smoke_summary_persistence_order.py
backend/tracing/: langsmith.py
backend/tracking/: latency.py
backend/voice/: deepgram_client.py  tts_client.py
backend/ws/: handler.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  main.tsx  types.ts  useIntakeSocket.ts  useMicrophone.ts
frontend/src/components/: FieldsPanel.tsx  HandoffBanner.tsx  (+5 more)
knowledge_base/clinic_policy/: after_hours.md  consent.md  escalation.md
knowledge_base/intake_templates/: standard_intake.md
knowledge_base/symptom_redflags/: redflags.json
